force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback</label>
    <pluralLabel>Customer Feedback</pluralLabel>
    <description>Captures quick, informal feedback (a compliment, suggestion, or concern) logged against a Contact record.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
        <displayFormat>CF-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>