force-app/main/default/objects/Customer_Feedback__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <description>Links this feedback record to the Contact it was logged for.</description>
    <inlineHelpText>Select the contact this feedback relates to.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Feedback</relationshipLabel>
    <relationshipName>Customer_Feedbacks</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>