force-app/main/default/objects/Customer_Feedback__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <label>Date Received</label>
    <description>The date the feedback was received from the customer.</description>
    <inlineHelpText>Enter the date this feedback was received.</inlineHelpText>
    <type>Date</type>
</CustomField>