force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notes__c</fullName>
    <label>Feedback Notes</label>
    <description>Free-text detail of the feedback provided by the customer.</description>
    <inlineHelpText>Enter the details of the feedback in the customer's own words where possible.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>