force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <label>Feedback Type</label>
    <description>Classifies the nature of the feedback logged against the contact.</description>
    <inlineHelpText>Choose whether this feedback is a compliment, a suggestion, or a concern.</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliment</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>