force-app/main/default/objects/Customer_Feedback__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <label>Follow Up Required</label>
    <description>Indicates whether this feedback needs a follow-up action with the customer.</description>
    <inlineHelpText>Check this if the feedback requires a follow-up with the customer.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>